--- a/css/style.css
+++ b/css/style.css
@@ -126,14 +126,14 @@ body {
   
   margin-top: 20px;
   margin-bottom: 10px;
-  background-image: url("images/skillsinpractice.jpg");
+  background-image: url("/images/skillsinpractice.jpg");
   background-size: cover;
   background-position: center;
   grid-area: skills-image-one; }
 
 .tallimage2 { 
   margin: 20px;
-  background-image: url("images/ppe9sma.jpeg");
+  background-image: url("/images/ppe9sma.jpeg");
   background-size: cover;
   padding: 20px;
   grid-area: tallimage2; }
@@ -348,3 +348,49 @@ a:link {
           height: 600px;
         }
         }
+/* wobble animation
+
+get info from 18.3
+.append message from index.js*/
+        @keyframes wobble-top {
+          16.65% {
+            transform: skew(-12deg);
+          }
+        
+          33.3% {
+            transform: skew(10deg);
+          }
+        
+          49.95% {
+            transform: skew(-6deg);
+          }
+        
+          66.6% {
+            transform: skew(4deg);
+          }
+        
+          83.25% {
+            transform: skew(-2deg);
+          }
+        
+          100% {
+            transform: skew(0);
+          }
+        }
+        
+        .wobble-top {
+          display: inline-block;
+          transform-origin: 0 100%;
+        
+          @include hideTapHighlightColor();
+          @include hardwareAccel();
+          @include improveAntiAlias();
+        
+          &:hover {
+            animation-name: wobble-top;
+            animation-duration: 1s;
+            animation-timing-function: ease-in-out;
+            animation-iteration-count: 1;
+          }
+        }
+        
