--- a/css/style.css
+++ b/css/style.css
@@ -111,8 +111,8 @@ body {
       position:fixed;
       z-index: 0;
       overflow: hidden;
-      left: 20vw;
-      width: 50%;
+      left: 22vw;
+      width: 40vw;
       bottom: 30vh;
     }
 
