--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body {
     .front
     {
       position:fixed;
-      z-index: 0;
+      z-index: 1;
       left: 15px;
       max-width:90vw;
       overflow-y: hidden;
@@ -376,6 +376,14 @@ a:link {
       }
         
  @media screen and (max-height: 1000px) {
+
+  .back{
+    left: 20px;
+  }
+
+  .front{
+    left:20px;
+  }
         .sidebarHero {
           width: 22vw;
         }
