--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ a:link {
           left: 23vw;
         }
         .sidebar {
-          top: 160px;
+          top: 10vh;
         }
         .headerHolder {
           
