--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,9 @@ body {
     z-index: 6
   }
 /*body*/
-
+#carouselExampleCaptions{
+  padding-top: 20px !important;
+}
 .back
     {
       position:fixed;
@@ -106,6 +108,27 @@ body {
       bottom: 0px;
     }
 
+    /*smt CSS*/
+.carousel-indicators .active{
+  color: orange!important;
+}
+.sidebar.smtbar{
+  width: 400px ;
+}
+.carousel-inner{
+  width: 600px;
+}
+.container.smtcontainer {
+  padding-left: 300px;
+}
+
+.carousel-caption {
+  color: black;
+  background-color: white;
+ opacity: .8;
+}
+
+    /*smt CSS end*/
     .bubble
     {
       position:fixed;
@@ -239,8 +262,25 @@ font-weight: 250;
   background-size: cover;
   margin: 10px;
   
+  
+}
+.smtcardcap {
+  position: relative;
+  top: 100px;
+  align-items: baseline;
+  text-align: center;
+  font-weight: 700;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.75);
+  box-shadow: 1px -2px 2px rgba(50, 50, 50, 0.75);
+  padding: 20px;
+  border-radius: 5px;
 }
 
+.smtcardcap:hover {
+  box-shadow: none;
+  background-color: white;
+}
 .workLink2 {
   width: 300px;
   height: 300px;
