--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
   }
-  .testbarMP{
+  .ideatebarMP{
     background-image: url("../images/mpside2.png");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
